# models/tanggapan.model.js
@@ -1,7 +1,10 @@
 module.exports = function (sequelize, Sequalize) {
   var Tanggapan = sequelize.define('Tanggapan', {
-    status: Sequalize.INTEGER,
+    foto: Sequalize.STRING,
     tanggapan: Sequalize.STRING,
+    deskripsi: Sequalize.STRING,
+    status: Sequalize.INTEGER,
+    selesai: Sequalize.STRING,
   });
   return Tanggapan;
 };
